fix overflow and other issues

--- a/src/app/booking-form/booking-form.component.scss
+++ b/src/app/booking-form/booking-form.component.scss
@@ -98,7 +98,6 @@
   -moz-appearance: none;
   appearance: none;
   text-indent: 1px;
-  background-image: url(../../assets/select_arrow.e038a9a9ac57cf3d89f8.svg);
   background-position-y: center;
   background-position-x: calc(100% - 15px);
   background-repeat: no-repeat;
