--- a/src/app/card/card.component.scss
+++ b/src/app/card/card.component.scss
@@ -45,7 +45,7 @@ img {
 }
 
 .card__text--title {
-  font-size: 15px;
+  font-size: 12px;
   font-weight: 500;
   word-break: break-word;
   line-height: 1.3;
