--- a/src/app/map/map.component.scss
+++ b/src/app/map/map.component.scss
@@ -1,4 +1,4 @@
 agm-map {
-  height: 100vh;
+  height: 94vh;
   width: 100vw;
 }
