--- a/src/styles.scss
+++ b/src/styles.scss
@@ -134,8 +134,4 @@ table {
 
 /////// Media Queries ///////////
 @media only screen and (min-device-width: 768px) and (max-device-width: 1440px) and (-webkit-min-device-pixel-ratio: 1) {
-  html,
-  body {
-    overflow: hidden;
-  }
 }
